[package]
name = "pallet-blacklist"
version = "1.0.0"
authors = ["José Molina <jmolinacolmenero@gmail.com>"]
edition = "2021"
license = "Unlicensed"
homepage = "https://substrate.io"
repository = "https://github.com/Moliholy/pallet-blacklist"
description = "FRAME pallet for blacklisting accounts"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
parity-scale-codec = { default-features = false, features = ["derive"], version = "3.6.12" }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }

[features]
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"parity-scale-codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
